[package]
name = "argos-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws","macros"] }
bincode = "1.3.3"
futures = "0.3"
serde = { version = "1.0.210", features = ["derive"] }
solana-account-decoder = "2.0.8"
solana-transaction-status = "2.0.8"
solana-client ="2.0.8"
solana-sdk ="2.0.8"
solana-program = "2.0.8"
solana-rpc-client-api = "2.0.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-timer = "0.2.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.128"
reqwest = { version = "=0.12.0", features = ["json","http2","multipart"] }
rand = "0.8.5"
tower = { version = "0.5.0", features = ["tokio", "util","limit"] }
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
console-subscriber = "0.4.0"


[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
