[package]
name = "argos-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws","macros"] }
bincode = "1.3.3"
futures = "0.3"
serde = { version = "1.0.210", features = ["derive"] }
solana-account-decoder = "2.0.8"
solana-transaction-status = "2.0.8"
solana-client ="2.0.8"
solana-sdk ="2.0.8"
solana-program = "2.0.8"
solana-rpc-client-api = "2.0.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-timer = "0.2.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.128"
reqwest = { version = "=0.12.0", features = ["json","http2","multipart"] }
rand = "0.8.5"
tower = { version = "0.5.0", features = ["tokio", "util","limit"] }
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
console-subscriber = "0.4.0"
