[package]
name = "ore-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
solana-bpf-loader-program = "2.0.10"
solana-client = "2.0.10"
solana-program = "2.0.10"
solana-program-runtime = "2.0.10"
solana-sdk = "2.0.10"
solana-svm = "2.0.10"
solana-system-program = "2.0.10"
solana-transaction-status = "2.0.13"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
